made it so one can not scroll when the menu is open to prevent bugs on mobile | might cause problems with things like landscape mode

--- a/Porfolio/src/assets/MenuBar.scss
+++ b/Porfolio/src/assets/MenuBar.scss
@@ -82,11 +82,11 @@
     transition: all 1s ease-in-out;
 
     //display: none;
-    &.is_open{
-      height: 100vh;
+    &.menu_is_open{
+      height: 100%;
 
     }
-    &.is_open .mobile-text{
+    &.menu_is_open .mobile-text{
       transform: translateX(0) !important;
     }
     &__link-container{
