--- a/Porfolio/src/assets/SwiperCustomStyles.css
+++ b/Porfolio/src/assets/SwiperCustomStyles.css
@@ -53,6 +53,14 @@ body {
   place-self: end !important;
 }
 
+body:has(.menu_is_open) {
+  overflow: hidden;
+}
+
+html:has(.menu_is_open) {
+  overflow: hidden;
+}
+
 .swiper-scrollbar {
   background: rgba(94, 234, 212, 0.4) !important;
   width: 60% !important;
