--- a/Porfolio/src/assets/base.scss
+++ b/Porfolio/src/assets/base.scss
@@ -55,3 +55,9 @@ body{
   place-self: end !important;
 }
 
+body:has(.menu_is_open) {
+  overflow: hidden;
+}
+html:has(.menu_is_open) {
+  overflow: hidden;
+}
